<resources>
    <string name="app_name">COURTAPP</string>
    <string name="ingresar_sesi_n">Ingresar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="segundo_nombre">Segundo Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="bienvenida">Bienvenidos a CourtApp</string>
    <string name="continuar">Continuar</string>
    <string name="descripcionLogo">logo</string>
    <string name="btnInicio">Iniciar sesion</string>
    <string name="btnRegistro">Registro</string>
    <string name="correo">Email</string>
    <string name="celular">Celular</string>
    <string name="registrarse">Registrarse</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="horario">Horario</string>
    <string name="descripcion">Descripcion</string>
    <string name="crear_canchas">Crear Canchas</string>
    <string name="canchas">Canchas</string>
    <string name="reservas_pendientes">Reservas Pendientes</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="content_descripcion_img">Imagen</string>
    <string name="precio">Precio</string>
    <string name="direccion">Direccion</string>
    <string name="eliminarcancha">Eliminar Cancha</string>
    <string name="reservacliente">Reserva</string>
    <string name="btnreservarcliente">R</string>
    <string name="Fecha">Fecha</string>
    <string name="calendario">Calendario</string>
    <string name="Hora">Hora</string>
    <string name="Reservar">Reservar</string>
</resources>