<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.MainAdmin">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgIcon4"
        android:layout_width="wrap_content"
        android:layout_height="121dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cancha" />

    <Button
        android:id="@+id/btnCerrarSession"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:onClick="goCerrarSession"
        android:padding="10dp"
        android:text="@string/cerrar_sesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoReservas"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/btnGoReservas"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:onClick="goReservas"
        android:padding="10dp"
        android:text="@string/reservas_pendientes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoCanchas"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btnGoCanchas"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:onClick="goCanchas"
        android:padding="10dp"
        android:text="@string/canchas"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />
</androidx.constraintlayout.widget.ConstraintLayout>