<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".cliente.vistaReservaCliente">

    <TextView
        android:id="@+id/txtHoraCliente"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_text"
        android:backgroundTint="@color/gris"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/txtFechaCliente"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:background="@drawable/border_text"
        android:backgroundTint="@color/gris"
        android:gravity="center"
        android:onClick="abrirCalendario"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgIcon6"
        android:layout_width="241dp"
        android:layout_height="70dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/Fecha"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/txtFechaCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/Hora"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/txtHoraCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnCalendario"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:onClick="abrirCalendario"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/txtFechaCliente"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <ImageButton
        android:id="@+id/btnHora"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:onClick="abrirHora"
        android:src="@android:drawable/ic_lock_idle_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/txtFechaCliente"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="sans-serif"
        android:onClick="guardarCancha"
        android:text="@string/Reservar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

</androidx.constraintlayout.widget.ConstraintLayout>